Added animal stats, simulation flow and more